<resources>
    <string name="app_name">Lab4</string>
    <string name="hello_message">Hello World! Yea</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_text">Login</string>
    <string name="login_default">Login name</string>
    <string name="password_text">Password</string>
    <string name="button1_text">Clear Chat History</string>
    <string name="button2_text">Button 2</string>
    <string name="switch_text">Enable Something</string>
    <string name="login_button_text">Log In</string>
    <string name="dialog_message">Do you want to go back to previous page?</string>
    <string name="dialog_title">Quit this page</string>
    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="chatButtonText">Start Chat ( • ̀ω•́ )</string>
    <string name="send">Send</string>
    <string name="weather_btn_text">Weather Forecast</string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="test_toolbar_btn_text">Test Toolbar</string>
    <string name="go_back_alert_title">Do you want to go back?</string>
    <string name="new_message">New Message</string>


</resources>
