<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.james.lab1.LoginActivity"
    tools:showIn="@layout/activity_login">

    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/login_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login_default"
        android:inputType="textEmailAddress"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/password_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text=""
        android:inputType="textPassword"/>





</LinearLayout>
